@@ -36,6 +36,8 @@ win32-pkg: all
 	mkdir -p tmp/italc
 	cp ica/ica.exe tmp/italc
 	cp ima/italc.exe tmp/italc
+	cp utils-win32/userinfo.exe tmp/italc
+	cp utils-win32/wake.exe tmp/italc
 	cp /opt/mingw/bin/QtCore4.dll tmp/italc
 	cp /opt/mingw/bin/QtGui4.dll tmp/italc
 	cp /opt/mingw/bin/QtNetwork4.dll tmp/italc
@@ -44,6 +46,7 @@ win32-pkg: all
 	cp /opt/mingw/bin/libjpeg.dll tmp/italc
 	cp /opt/mingw/bin/libssl32.dll tmp/italc
 	cp /opt/mingw/bin/libz.dll tmp/italc
+	cp /opt/mingw/i586-mingw32/bin/mingwm10.dll tmp/italc
 	/opt/mingw/bin/i586-mingw32-strip tmp/italc/ica.exe
 	/opt/mingw/bin/i586-mingw32-strip tmp/italc/italc.exe
 	cd tmp && zip -9 ../$(PACKAGE)-$(VERSION).zip italc/*
